--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "php": ">=7.3.0",
     "spatie/eloquent-sortable": "^3.10.0|^4.0",
     "laravel/nova": "^3.0",
-    "optimistdigital/nova-translations-loader": "^3.0.0"
+    "optimistdigital/nova-translations-loader": "^3.10.0"
   },
   "autoload": {
     "psr-4": {
@@ -26,6 +26,12 @@
       ]
     }
   },
+  "repositories": [
+    {
+      "type": "vcs",
+      "url": "https://github.com/XternalSoft/nova-translations-loader"
+    }
+  ],
   "config": {
     "sort-packages": true
   },
